04-TerraformResources/02/sg.tf
resource "aws_security_group" "initkloud_sg01" {
  name        = "initkloud_sg01"
  description = "initkloud vpc default security group"
  vpc_id      = aws_vpc.initkloud_vpc.id
  ingress {
    description = "Allow port 22 for SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Allow port 80 for HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all outgoing trafic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
